--- a/src/Modal.css
+++ b/src/Modal.css
@@ -10,14 +10,17 @@ modal-background {
 }
 
 .modal-main {
-  position:fixed;
-  background: rgb(126, 179, 137);
+  position: fixed;
+  background: white;
+  color: black;
+  border: 2px solid rgb(0, 87, 13); /* Updated border properties */
   width: 80%;
-  height: auto;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
+  height: 80%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 1em;
+  overflow: auto;
 }
 
 .modal-main button.close {
@@ -25,6 +28,6 @@ modal-background {
   background: none;
   border: none;
   position: absolute;
-  top: 0em; 
+  top: 0;
   right: 0.2em;
 }
