--- a/src/Modal.css
+++ b/src/Modal.css
@@ -1,21 +1,21 @@
-modal-background {
+.modal-background {
   display: block;
   position: fixed;
   top: 0;
   left: 0;
   width:100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(45, 244, 0, 0.146);
   z-index: 1000;
 }
 
 .modal-main {
   position: fixed;
-  background: white;
+  background: rgba(242, 254, 1, 0.258);
   color: black;
   border: 2px solid rgb(0, 87, 13); /* Updated border properties */
-  width: 80%;
-  height: 80%;
+  width: 50%;
+  height: 30%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
