--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,33 @@ html {
   max-height: 200px;
 }
 
+
+.left-nav {
+  border-right: 1px solid;
+  margin: 0;
+  padding: 10px;
+  text-align: center;
+  width: 300px; /* Adjust the width as needed */
+  height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  border-top: none;
+  direction: rtl;
+}
+
+.left-nav::-webkit-scrollbar {
+  width: 12px;
+}
+
+.left-nav::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
+
+.left-nav::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+
+
+
+
