--- a/src/Modal.css
+++ b/src/Modal.css
@@ -5,22 +5,21 @@
   left: 0;
   width:100%;
   height: 100%;
-  background: rgba(45, 244, 0, 0.146);
+  background: rgba(0, 0, 0, 0.146);
   z-index: 1000;
 }
 
 .modal-main {
   position: fixed;
-  background: rgba(242, 254, 1, 0.258);
+  background: rgba(97, 155, 94, 0.892);
   color: black;
-  border: 2px solid rgb(0, 87, 13); /* Updated border properties */
-  width: 50%;
-  height: 30%;
+  border: 2px solid rgb(1, 77, 5);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 1em;
+  padding: 5em;
   overflow: auto;
+  border-radius: 10px; /* Adjust the radius as needed */
 }
 
 .modal-main button.close {
