--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,63 @@
 html {
   scroll-behavior: smooth;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+  margin-left: 10px;
+  margin-right: 10px;
+  background-color: rgb(16, 60, 17);
+  overflow-y: auto;
 }
+
+html::-webkit-scrollbar {
+  width: 0px;
+}
+
+
+html::-webkit-scrollbar-track {
+  background-color: transparent;
+  width: 2px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #043f00;
+}
+
+
+
+.btn-primary {
+  background-color: #0e6b00;
+  color: #fff;
+  border-color: #000000;
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #007f0d;
+}
+
 
 .plant-image {
   max-width: 200px;
-  max-height: 200px;
+  max-height: 110px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 
-.left-nav {
-  border-right: 1px solid;
-  margin: 0;
-  padding: 10px;
-  text-align: center;
-  width: 300px; /* Adjust the width as needed */
-  height: 100vh;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  border-top: none;
-  direction: rtl;
+
+
+
+.container-main {
+  background-color: black;
 }
 
-.left-nav::-webkit-scrollbar {
-  width: 12px;
-}
 
-.left-nav::-webkit-scrollbar-thumb {
-  background-color: #888;
-}
-
-.left-nav::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
-}
 
 
 
