--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,30 @@
-html {
+.html {
   scroll-behavior: smooth;
   scrollbar-width: thin;
-  scrollbar-color: transparent transparent;
-  margin-left: 10px;
-  margin-right: 10px;
-  background-color: rgb(16, 60, 17);
-  overflow-y: auto;
+  scrollbar-color: transparent;
+  
 }
 
-html::-webkit-scrollbar {
+.html::-webkit-scrollbar {
   width: 0px;
 }
 
+body {
+  height: 100vh;
+  overflow: auto;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top:5px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+ 
+}
+
+#root {
+  height: 100%;
+  font-family: Roboto, Arial, sans-serif, "Trebuchet MS", Arial, sans-serif;
+  background-color: inherit;
+}
 
 html::-webkit-scrollbar-track {
   background-color: transparent;
@@ -31,14 +44,16 @@ html::-webkit-scrollbar-thumb {
   padding: 10px 20px;
   border-radius: 4px;
   font-size: 16px;
+  height: 50px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  text-align: center; 
 }
+
 
 .btn-primary:hover {
   background-color: #007f0d;
 }
-
 
 .plant-image {
   max-width: 200px;
@@ -49,17 +64,57 @@ html::-webkit-scrollbar-thumb {
   object-position: center;
 }
 
-
-
-
-
-.container-main {
-  background-color: black;
+.form-container {
+  margin: 40px auto 0; 
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: rgba(97, 155, 94, 0.892);
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+  font-weight: bold;
+  margin-bottom: 40px;
 }
 
+.navbar-toggler {
+  background-color: white;
+  width: 20px;
+  height: 30px;
+}
 
+.dropdown-menu {
+  background-color: white;
+  color: black;
+}
 
+.nav-pills .nav-link {
+  background-color: #0e6b00;
+  color: #fff;
+  border-color: #000000;
+  padding: 6px 6px;
+  border-radius: 4px;
+  font-size: 14px; 
+  height: 30px; 
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-align: center;
+  margin-right: 10px;
+  margin-top: 10px; 
+}
 
+.nav-pills .nav-link:hover {
+  background-color: #007f0d;
+}
 
+.nav-pills .nav-link.active {
+  background-color: #79ac7d;
+}
 
-
+.brand-photo {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
