--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,9 @@
 body {
   height: 100vh;
   overflow: auto;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top:5px;
+  
   background-color: rgb(255, 255, 255);
-  display: flex;
- 
+  
 }
 
 #root {
@@ -65,19 +62,21 @@ html::-webkit-scrollbar-thumb {
 }
 
 .form-container {
-  margin: 40px auto 0; 
+  margin: 40px auto 0;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 10px;
-  background-color: rgba(97, 155, 94, 0.892);
+  background-color: rgba(16, 110, 63, 0.892);
   width: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
   font-weight: bold;
   margin-bottom: 40px;
+  max-width: 100%; /* Allow the container to flex with the page */
 }
+
 
 .navbar-toggler {
   background-color: white;
@@ -88,6 +87,13 @@ html::-webkit-scrollbar-thumb {
 .dropdown-menu {
   background-color: white;
   color: black;
+}
+
+.nav {
+  background-color: rgb(1, 58, 3);
+  border: 1px solid black;
+  
+  padding: 10px
 }
 
 .nav-pills .nav-link {
@@ -101,8 +107,9 @@ html::-webkit-scrollbar-thumb {
   cursor: pointer;
   transition: background-color 0.3s ease;
   text-align: center;
-  margin-right: 10px;
+  margin-right: 4px;
   margin-top: 10px; 
+  margin-left: 10px
 }
 
 .nav-pills .nav-link:hover {
@@ -118,3 +125,103 @@ html::-webkit-scrollbar-thumb {
   height: 50px;
   border-radius: 50%;
 }
+
+.m-brand-photo {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+/* .plant-card {
+  width: 300px;
+  margin-bottom: 20px;
+}
+
+.plant-card .card-img-top {
+  height: 200px;
+  object-fit: cover;
+}
+
+.plant-card .card-title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.plant-card .card-text {
+  font-size: 14px;
+}
+
+.plant-card .btn {
+  width: 100%;
+} */
+
+.card {
+  margin-bottom: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 4px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 300px;
+}
+
+.card-container {
+  width: 300px;
+  height: 100%;
+ 
+  display: flex;
+  flex-direction: column;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 140px;
+  object-fit: cover;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.card-body {
+  padding: 20px;
+  flex-grow: 1; /* Allow the card body to grow vertically */
+}
+
+.card-footer {
+  padding: 10px;
+  text-align: center;
+}
+
+.card-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.card-text {
+  margin-bottom: 10px;
+}
+
+.card-button {
+  margin-top: auto;
+}
+
+#index-container {
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 0px;
+  background-color: rgba(97, 155, 94, 0.892);
+  margin-bottom: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+@media (max-width: 576px) {
+  .col-sm-6 {
+    width: 100%;
+  }
+}
+
+
+
+
